# DISCORD_TEST_my_first_bot

./: .gitignore  Cargo.toml
src/: main.rs
