[package]
name = "my_first_personal_bot"
version = "0.1.0"
authors = ["tibo1503"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

reqwest = "0.11.4"

serde = "1.0"
serde_json = "1.0"
